crates/toml/tests/snapshots/invalid/string/no-open-01.stderr
TOML parse error at line 1, column 5
  |
1 | s = a"
  |     ^^
string values must be quoted, expected literal string
